# trellis-mac

./: .gitignore  README.md  pyproject.toml  setup.sh
.github/skills/git-fork-remote-setup/: SKILL.md
.github/skills/git-fork-remote-setup/scripts/: configure-remotes.sh
docs/trellis-mac-frontend/: 01-system-overview.md  02-requirements-specification.md  03-architecture-and-design.md  04-api-contract.md  05-ui-design-specification.md  06-operations-runbook.md  07-verification-validation-plan.md  08-traceability-matrix.md  09-risk-security-quality-plan.md  10-configuration-change-management.md  README.md
docs/trellis-mac-frontend/diagrams/: 01-system-context.dot  02-frontend-component-architecture.dot  03-api-session-flow.dot  04-workflow-step-state-machine.dot  05-data-artifact-flow.dot  06-operations-deployment-flow.dot  07-quality-gate-and-traceability.dot  08-step-dependency-graph.dot  README.md
tests/: test_workflow_contract.py
trellis_workflow/: __init__.py  app.py  artifacts.py  definitions.py  exporter.py  models.py  workflow.py
trellis_workflow/runtime/: __init__.py  bootstrap.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  styles.css  types.ts
web/src/api/: client.ts
web/src/components/: ArtifactPanel.test.tsx  ArtifactPanel.tsx  LogPanel.tsx  ModelPreview.tsx  ParameterPanel.tsx  StepDetails.tsx  StepList.tsx
web/src/lib/: artifacts.test.ts  artifacts.ts  workflow.test.ts  workflow.ts
